kubernetes/apps/paperless/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Paperless
    gethomepage.dev/group: Documents
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/href: https://paperless.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=paperless-ngx
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`paperless.syslabs.dev`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: 8000
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ai
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Paperless-AI
    gethomepage.dev/group: Documents
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/href: https://paperless-ai.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=paperless-ai
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`paperless-ai.syslabs.dev`)
      kind: Rule
      services:
        - name: paperless-ai
          port: 3000
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-gpt
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Paperless-GPT
    gethomepage.dev/group: Documents
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/href: https://paperless-gpt.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=paperless-gpt
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`paperless-gpt.syslabs.dev`)
      kind: Rule
      services:
        - name: paperless-gpt
          port: 8080
  tls: {}
